--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,9 @@
-appdirs==1.4.3
-cffi==1.13.2
-Click==7.0
-cryptography==2.8
-distlib==0.3.0
-filelock==3.0.12
-Flask==1.1.1
+click==7.1.2
+Flask==1.1.2
 Flask-Cors==3.0.8
 gunicorn==20.0.4
-importlib-metadata==1.6.0
-importlib-resources==1.5.0
 itsdangerous==1.1.0
-Jinja2==2.11.1
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-numpy==1.18.1
-pandas==1.0.1
-pycparser==2.19
-python-dateutil==2.8.1
-pytz==2019.3
-six==1.13.0
-virtualenv==20.0.19
-Werkzeug==1.0.0
-zipp==3.1.0
+six==1.14.0
+Werkzeug==1.0.1
